Structure upgrade and functionalities addition